# client

./: Makefile.am  README  configure.ac
src/: Makefile.am  game.c  game.h  main.c
